cmake_minimum_required (VERSION 2.8)

PROJECT (DEMO)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

ADD_DEFINITIONS("-Wall -DNDEBUG -ggdb3")

INCLUDE_DIRECTORIES ("~/proj/leveldb/include")
LINK_DIRECTORIES ("~/proj/leveldb")

LINK_LIBRARIES(leveldb)

AUX_SOURCE_DIRECTORY("./" DIR_SRCS)
ADD_EXECUTABLE(demo ${DIR_SRCS})


# make install setting
install(TARGETS demo
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib/static
    PUBLIC_HEADER DESTINATION include
    )
SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/output/)

